# rust_deep_learning

./: .gitignore  Cargo.toml  LICENSE  README.md  keras_example.ipynb
src/: activations.rs  configuration.rs  lib.rs  main.rs
src/activations/: functions.rs
src/configuration/: compile_config.rs  config.rs  inner_config.rs  layer.rs  loss.rs  metric.rs  mod.rs  optimizer.rs
src/helpers/: csv_helper.rs  hdf5_helper.rs  mod.rs  zip_helper.rs
src/layer/: activation_layer.rs  dense.rs  flatten.rs  mod.rs
src/layers/: activation_layer.rs  dense.rs  flatten.rs  layer_trait.rs  mod.rs
src/model/: mod.rs  sequantial.rs  sequential.rs
