[package]
name = "rust_deep_learning"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_approx_eq = "1.1.0"
hdf5 = "0.8.1"
ndarray = { version = "0.15.6", features = ["serde"] }
ndarray-npy = "0.8.1"
num-integer = "0.1.46"
polars = { version = "0.38.3", features = ["lazy", "ndarray"] }
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tempfile = "3.10.1"
zip = "0.6.6"
